MODORDERS-1419 - Adding maven-spotless-plugin