@@ -1,7 +1,6 @@
 package org.folio.service.pieces;
 
 import static io.vertx.core.Future.succeededFuture;
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.folio.TestConfig.autowireDependencies;
 import static org.folio.TestConfig.clearServiceInteractions;
 import static org.folio.TestConfig.clearVertxContext;
@@ -11,6 +10,7 @@ import static org.folio.TestConfig.initSpringContext;
 import static org.folio.TestConfig.isVerticleNotDeployed;
 import static org.folio.service.inventory.InventoryHoldingManager.HOLDING_PERMANENT_LOCATION_ID;
 import static org.folio.service.inventory.InventoryHoldingManager.ID;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
@@ -19,6 +19,8 @@ import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
+import io.vertx.core.Context;
+import io.vertx.core.json.JsonObject;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -27,7 +29,6 @@ import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
 import java.util.stream.Stream;
-
 import org.folio.ApiTestSuiteIT;
 import org.folio.models.HoldingDataExclusionConfig;
 import org.folio.models.HoldingDataExclusionMode;
@@ -54,35 +55,24 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 
-import io.vertx.core.Context;
-import io.vertx.core.json.JsonObject;
-
 @ExtendWith(MockitoExtension.class)
 public class PieceUpdateInventoryServiceIT {
 
-  @Autowired
-  private ConsortiumUserTenantService consortiumUserTenantService;
-  @Autowired
-  private PieceUpdateInventoryService pieceUpdateInventoryService;
-  @Autowired
-  private HoldingDeletionService holdingDeletionService;
-  @Autowired
-  private InventoryItemManager inventoryItemManager;
-  @Autowired
-  private InventoryHoldingManager inventoryHoldingManager;
-  @Autowired
-  private PieceStorageService pieceStorageService;
-  @Autowired
-  private PurchaseOrderLineService purchaseOrderLineService;
-  @Mock
-  private Map<String, String> okapiHeadersMock;
+  @Autowired private ConsortiumUserTenantService consortiumUserTenantService;
+  @Autowired private PieceUpdateInventoryService pieceUpdateInventoryService;
+  @Autowired private HoldingDeletionService holdingDeletionService;
+  @Autowired private InventoryItemManager inventoryItemManager;
+  @Autowired private InventoryHoldingManager inventoryHoldingManager;
+  @Autowired private PieceStorageService pieceStorageService;
+  @Autowired private PurchaseOrderLineService purchaseOrderLineService;
+  @Mock private Map<String, String> okapiHeadersMock;
 
   private final Context ctx = getFirstContextFromVertx(getVertx());
   private RequestContext requestContext;
   private static boolean runningOnOwn;
 
   @BeforeEach
-  void initMocks(){
+  void initMocks() {
     autowireDependencies(this);
     requestContext = new RequestContext(ctx, okapiHeadersMock);
   }
@@ -113,21 +103,23 @@ public class PieceUpdateInventoryServiceIT {
   void shouldNotDeleteHoldingIfHoldingIdIsNull() {
     pieceUpdateInventoryService.deleteHoldingConnectedToPiece(null, requestContext);
 
-    verify(inventoryHoldingManager, times(0)).getHoldingById(null , true, requestContext);
-    verify(inventoryHoldingManager, times(0)).deleteHoldingById(null , true, requestContext);
+    verify(inventoryHoldingManager, times(0)).getHoldingById(null, true, requestContext);
+    verify(inventoryHoldingManager, times(0)).deleteHoldingById(null, true, requestContext);
   }
 
   @Test
   void shouldNotDeleteHoldingIfHoldingIdIsNotNullButNotFoundInTheDB() {
     String holdingId = UUID.randomUUID().toString();
     Piece piece = new Piece().withId(UUID.randomUUID().toString()).withHoldingId(holdingId);
-    doReturn(succeededFuture(null)).when(inventoryHoldingManager).getHoldingById(piece.getHoldingId() , true, requestContext);
+    doReturn(succeededFuture(null))
+        .when(inventoryHoldingManager)
+        .getHoldingById(piece.getHoldingId(), true, requestContext);
 
     pieceUpdateInventoryService.deleteHoldingConnectedToPiece(piece, requestContext).result();
 
-    verify(inventoryHoldingManager, times(0)).deleteHoldingById(piece.getHoldingId() , true, requestContext);
+    verify(inventoryHoldingManager, times(0))
+        .deleteHoldingById(piece.getHoldingId(), true, requestContext);
   }
-
 
   @Test
   void shouldDeleteHoldingIfHoldingIdIsProvidedAndFoundInDBAndNoPiecesAndItems() {
@@ -135,13 +127,29 @@ public class PieceUpdateInventoryServiceIT {
     JsonObject holding = new JsonObject();
     holding.put(ID, holdingId);
     holding.put(HOLDING_PERMANENT_LOCATION_ID, UUID.randomUUID().toString());
-    Piece piece = new Piece().withId(UUID.randomUUID().toString()).withHoldingId(holdingId).withPoLineId(UUID.randomUUID().toString());
-    doReturn(succeededFuture(Collections.emptyList())).when(consortiumUserTenantService).getUserTenantsIfNeeded(any());
-    doReturn(succeededFuture(holding)).when(inventoryHoldingManager).getHoldingById(holdingId, true, requestContext);
-    doReturn(succeededFuture(Collections.emptyList())).when(purchaseOrderLineService).getPoLinesByHoldingIds(List.of(holdingId), requestContext);
-    doReturn(succeededFuture(Collections.emptyList())).when(pieceStorageService).getPiecesByHoldingId(holdingId, requestContext);
-    doReturn(succeededFuture(Collections.emptyList())).when(inventoryItemManager).getItemsByHoldingId(holdingId, requestContext);
-    doReturn(succeededFuture(null)).when(inventoryHoldingManager).deleteHoldingById(holdingId, true, requestContext);
+    Piece piece =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(UUID.randomUUID().toString());
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(consortiumUserTenantService)
+        .getUserTenantsIfNeeded(any());
+    doReturn(succeededFuture(holding))
+        .when(inventoryHoldingManager)
+        .getHoldingById(holdingId, true, requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(purchaseOrderLineService)
+        .getPoLinesByHoldingIds(List.of(holdingId), requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(pieceStorageService)
+        .getPiecesByHoldingId(holdingId, requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(inventoryItemManager)
+        .getItemsByHoldingId(holdingId, requestContext);
+    doReturn(succeededFuture(null))
+        .when(inventoryHoldingManager)
+        .deleteHoldingById(holdingId, true, requestContext);
 
     pieceUpdateInventoryService.deleteHoldingConnectedToPiece(piece, requestContext).result();
 
@@ -155,13 +163,27 @@ public class PieceUpdateInventoryServiceIT {
     JsonObject holding = new JsonObject();
     holding.put(ID, holdingId);
     holding.put(HOLDING_PERMANENT_LOCATION_ID, locationId);
-    Piece piece = new Piece().withId(UUID.randomUUID().toString()).withHoldingId(holdingId).withPoLineId(UUID.randomUUID().toString());
+    Piece piece =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(UUID.randomUUID().toString());
     Piece piece2 = new Piece().withId(UUID.randomUUID().toString()).withHoldingId(holdingId);
-    doReturn(succeededFuture(Collections.emptyList())).when(consortiumUserTenantService).getUserTenantsIfNeeded(any());
-    doReturn(succeededFuture(holding)).when(inventoryHoldingManager).getHoldingById(holdingId, true, requestContext);
-    doReturn(succeededFuture(Collections.emptyList())).when(purchaseOrderLineService).getPoLinesByHoldingIds(List.of(holdingId), requestContext);
-    doReturn(succeededFuture(List.of(piece, piece2))).when(pieceStorageService).getPiecesByHoldingId(holdingId, requestContext);
-    doReturn(succeededFuture(Collections.emptyList())).when(inventoryItemManager).getItemsByHoldingId(holdingId, requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(consortiumUserTenantService)
+        .getUserTenantsIfNeeded(any());
+    doReturn(succeededFuture(holding))
+        .when(inventoryHoldingManager)
+        .getHoldingById(holdingId, true, requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(purchaseOrderLineService)
+        .getPoLinesByHoldingIds(List.of(holdingId), requestContext);
+    doReturn(succeededFuture(List.of(piece, piece2)))
+        .when(pieceStorageService)
+        .getPiecesByHoldingId(holdingId, requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(inventoryItemManager)
+        .getItemsByHoldingId(holdingId, requestContext);
 
     pieceUpdateInventoryService.deleteHoldingConnectedToPiece(piece, requestContext).result();
 
@@ -174,12 +196,26 @@ public class PieceUpdateInventoryServiceIT {
     JsonObject holding = new JsonObject();
     holding.put(ID, holdingId);
     JsonObject item = new JsonObject().put(ID, UUID.randomUUID().toString());
-    Piece piece = new Piece().withId(UUID.randomUUID().toString()).withHoldingId(holdingId).withPoLineId(UUID.randomUUID().toString());
-    doReturn(succeededFuture(Collections.emptyList())).when(consortiumUserTenantService).getUserTenantsIfNeeded(any());
-    doReturn(succeededFuture(holding)).when(inventoryHoldingManager).getHoldingById(holdingId, true, requestContext);
-    doReturn(succeededFuture(Collections.emptyList())).when(purchaseOrderLineService).getPoLinesByHoldingIds(List.of(holdingId), requestContext);
-    doReturn(succeededFuture(Collections.emptyList())).when(pieceStorageService).getPiecesByHoldingId(holdingId, requestContext);
-    doReturn(succeededFuture(List.of(item))).when(inventoryItemManager).getItemsByHoldingId(holdingId, requestContext);
+    Piece piece =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(UUID.randomUUID().toString());
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(consortiumUserTenantService)
+        .getUserTenantsIfNeeded(any());
+    doReturn(succeededFuture(holding))
+        .when(inventoryHoldingManager)
+        .getHoldingById(holdingId, true, requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(purchaseOrderLineService)
+        .getPoLinesByHoldingIds(List.of(holdingId), requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(pieceStorageService)
+        .getPiecesByHoldingId(holdingId, requestContext);
+    doReturn(succeededFuture(List.of(item)))
+        .when(inventoryItemManager)
+        .getItemsByHoldingId(holdingId, requestContext);
 
     pieceUpdateInventoryService.deleteHoldingConnectedToPiece(piece, requestContext).result();
 
@@ -201,70 +237,89 @@ public class PieceUpdateInventoryServiceIT {
     List<String> userTenants = List.of(tenant1, tenant2, tenant3);
 
     // Piece being deleted
-    Piece pieceToDelete = new Piece()
-      .withId(UUID.randomUUID().toString())
-      .withHoldingId(holdingId)
-      .withPoLineId(UUID.randomUUID().toString());
+    Piece pieceToDelete =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(UUID.randomUUID().toString());
 
     // Tenant 1: has 2 poLines and 1 piece
     String poLineId1Tenant1 = UUID.randomUUID().toString();
     String poLineId2Tenant1 = UUID.randomUUID().toString();
-    PoLine poLine1Tenant1 = new PoLine()
-      .withId(poLineId1Tenant1)
-      .withLocations(List.of(new Location().withHoldingId(holdingId)));
-    PoLine poLine2Tenant1 = new PoLine()
-      .withId(poLineId2Tenant1)
-      .withLocations(List.of(new Location().withHoldingId(holdingId)));
-    Piece piece1Tenant1 = new Piece()
-      .withId(UUID.randomUUID().toString())
-      .withHoldingId(holdingId)
-      .withPoLineId(poLineId1Tenant1);
+    PoLine poLine1Tenant1 =
+        new PoLine()
+            .withId(poLineId1Tenant1)
+            .withLocations(List.of(new Location().withHoldingId(holdingId)));
+    PoLine poLine2Tenant1 =
+        new PoLine()
+            .withId(poLineId2Tenant1)
+            .withLocations(List.of(new Location().withHoldingId(holdingId)));
+    Piece piece1Tenant1 =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(poLineId1Tenant1);
 
     // Tenant 2: has 1 poLine and 2 pieces
     String poLineId1Tenant2 = UUID.randomUUID().toString();
-    Piece piece1Tenant2 = new Piece()
-      .withId(UUID.randomUUID().toString())
-      .withHoldingId(holdingId)
-      .withPoLineId(poLineId1Tenant2);
-    Piece piece2Tenant2 = new Piece()
-      .withId(UUID.randomUUID().toString())
-      .withHoldingId(holdingId)
-      .withPoLineId(poLineId1Tenant2);
+    Piece piece1Tenant2 =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(poLineId1Tenant2);
+    Piece piece2Tenant2 =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(poLineId1Tenant2);
 
     // Tenant 3: has 1 poLine and 1 piece
     String poLineId1Tenant3 = UUID.randomUUID().toString();
-    Piece piece1Tenant3 = new Piece()
-      .withId(UUID.randomUUID().toString())
-      .withHoldingId(holdingId)
-      .withPoLineId(poLineId1Tenant3);
+    Piece piece1Tenant3 =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(poLineId1Tenant3);
 
     // Mock consortium service to return multiple tenants (triggers lines 119-125)
-    doReturn(succeededFuture(userTenants)).when(consortiumUserTenantService).getUserTenantsIfNeeded(any());
+    doReturn(succeededFuture(userTenants))
+        .when(consortiumUserTenantService)
+        .getUserTenantsIfNeeded(any());
 
     // Mock holding retrieval
-    doReturn(succeededFuture(holding)).when(inventoryHoldingManager).getHoldingById(holdingId, true, requestContext);
+    doReturn(succeededFuture(holding))
+        .when(inventoryHoldingManager)
+        .getHoldingById(holdingId, true, requestContext);
 
-    // Mock getPoLinesByHoldingIds for each tenant - use any() for RequestContext as it's recreated per tenant
+    // Mock getPoLinesByHoldingIds for each tenant - use any() for RequestContext as it's recreated
+    // per tenant
     doReturn(succeededFuture(List.of(poLine1Tenant1, poLine2Tenant1)))
-      .when(purchaseOrderLineService).getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
+        .when(purchaseOrderLineService)
+        .getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
 
     // Mock getPiecesByHoldingId for each tenant
     doReturn(succeededFuture(List.of(piece1Tenant1)))
-      .doReturn(succeededFuture(List.of(piece1Tenant2, piece2Tenant2)))
-      .doReturn(succeededFuture(List.of(piece1Tenant3)))
-      .when(pieceStorageService).getPiecesByHoldingId(eq(holdingId), any());
+        .doReturn(succeededFuture(List.of(piece1Tenant2, piece2Tenant2)))
+        .doReturn(succeededFuture(List.of(piece1Tenant3)))
+        .when(pieceStorageService)
+        .getPiecesByHoldingId(eq(holdingId), any());
 
     // Mock items (empty for all tenants)
-    doReturn(succeededFuture(Collections.emptyList())).when(inventoryItemManager).getItemsByHoldingId(holdingId, requestContext);
+    doReturn(succeededFuture(Collections.emptyList()))
+        .when(inventoryItemManager)
+        .getItemsByHoldingId(holdingId, requestContext);
 
     // Execute
-    pieceUpdateInventoryService.deleteHoldingConnectedToPiece(pieceToDelete, requestContext).result();
+    pieceUpdateInventoryService
+        .deleteHoldingConnectedToPiece(pieceToDelete, requestContext)
+        .result();
 
     // Verify deletion did NOT happen because linked poLines and pieces exist across tenants
     verify(inventoryHoldingManager, times(0)).deleteHoldingById(holdingId, true, requestContext);
 
     // Verify that the service queried all 3 tenants (lines 119-125 executed for each tenant)
-    verify(purchaseOrderLineService, times(3)).getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
+    verify(purchaseOrderLineService, times(3))
+        .getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
     verify(pieceStorageService, times(3)).getPiecesByHoldingId(eq(holdingId), any());
   }
 
@@ -281,48 +336,67 @@ public class PieceUpdateInventoryServiceIT {
     String tenant2 = "tenant-2";
     List<String> userTenants = List.of(tenant1, tenant2);
 
-    Piece pieceToDelete = new Piece()
-      .withId(UUID.randomUUID().toString())
-      .withHoldingId(holdingId)
-      .withPoLineId(UUID.randomUUID().toString());
+    Piece pieceToDelete =
+        new Piece()
+            .withId(UUID.randomUUID().toString())
+            .withHoldingId(holdingId)
+            .withPoLineId(UUID.randomUUID().toString());
 
     // Mock consortium service to return multiple tenants (triggers lines 119-125)
-    doReturn(succeededFuture(userTenants)).when(consortiumUserTenantService).getUserTenantsIfNeeded(any());
+    doReturn(succeededFuture(userTenants))
+        .when(consortiumUserTenantService)
+        .getUserTenantsIfNeeded(any());
 
     // Mock holding retrieval
-    doReturn(succeededFuture(holding)).when(inventoryHoldingManager).getHoldingById(holdingId, true, requestContext);
+    doReturn(succeededFuture(holding))
+        .when(inventoryHoldingManager)
+        .getHoldingById(holdingId, true, requestContext);
 
     // All tenants return empty results
     doReturn(succeededFuture(Collections.emptyList()))
-      .when(purchaseOrderLineService).getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
+        .when(purchaseOrderLineService)
+        .getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
     doReturn(succeededFuture(Collections.emptyList()))
-      .when(pieceStorageService).getPiecesByHoldingId(eq(holdingId), any());
+        .when(pieceStorageService)
+        .getPiecesByHoldingId(eq(holdingId), any());
     doReturn(succeededFuture(Collections.emptyList()))
-      .when(inventoryItemManager).getItemsByHoldingId(holdingId, requestContext);
+        .when(inventoryItemManager)
+        .getItemsByHoldingId(holdingId, requestContext);
 
     // Mock successful deletion
-    doReturn(succeededFuture(null)).when(inventoryHoldingManager).deleteHoldingById(holdingId, true, requestContext);
+    doReturn(succeededFuture(null))
+        .when(inventoryHoldingManager)
+        .deleteHoldingById(holdingId, true, requestContext);
 
     // Execute
-    pieceUpdateInventoryService.deleteHoldingConnectedToPiece(pieceToDelete, requestContext).result();
+    pieceUpdateInventoryService
+        .deleteHoldingConnectedToPiece(pieceToDelete, requestContext)
+        .result();
 
     // Verify deletion happened because no linked data exists across all tenants
     verify(inventoryHoldingManager, times(1)).deleteHoldingById(holdingId, true, requestContext);
 
     // Verify that the service queried both tenants (lines 119-125 executed for each tenant)
-    verify(purchaseOrderLineService, times(2)).getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
+    verify(purchaseOrderLineService, times(2))
+        .getPoLinesByHoldingIds(eq(List.of(holdingId)), any());
     verify(pieceStorageService, times(2)).getPiecesByHoldingId(eq(holdingId), any());
   }
 
   @ParameterizedTest(name = "{0}")
   @MethodSource("excludePoLinesTestCases")
   @SuppressWarnings("unchecked")
-  void testExcludePoLines(String testName, List<PoLine> input, Set<String> excludeIds, List<String> expectedIds) {
+  void testExcludePoLines(
+      String testName, List<PoLine> input, Set<String> excludeIds, List<String> expectedIds) {
     try {
-      var method = HoldingDeletionService.class.getDeclaredMethod("excludePoLines", List.class, HoldingDataExclusionConfig.class);
+      var method =
+          HoldingDeletionService.class.getDeclaredMethod(
+              "excludePoLines", List.class, HoldingDataExclusionConfig.class);
       method.setAccessible(true);
-      var exclusionConfig = new HoldingDataExclusionConfig(HoldingDataExclusionMode.PIECE_RECEIVING, excludeIds, Set.of());
-      List<PoLine> result = (List<PoLine>) method.invoke(holdingDeletionService, input, exclusionConfig);
+      var exclusionConfig =
+          new HoldingDataExclusionConfig(
+              HoldingDataExclusionMode.PIECE_RECEIVING, excludeIds, Set.of());
+      List<PoLine> result =
+          (List<PoLine>) method.invoke(holdingDeletionService, input, exclusionConfig);
       assertEquals(expectedIds, result.stream().map(PoLine::getId).toList());
     } catch (Exception e) {
       throw new RuntimeException("Failed to invoke excludePoLines", e);
@@ -331,25 +405,38 @@ public class PieceUpdateInventoryServiceIT {
 
   static Stream<Arguments> excludePoLinesTestCases() {
     return Stream.of(
-      Arguments.of("checkinItems=true kept even in excludeIds",
-        List.of(new PoLine().withId("id1").withCheckinItems(true)), Set.of("id1"), List.of("id1")),
-      Arguments.of("checkinItems=false kept when NOT in excludeIds",
-        List.of(new PoLine().withId("id1").withCheckinItems(false)), Set.of("id2"), List.of("id1")),
-      Arguments.of("checkinItems=false filtered when in excludeIds",
-        List.of(new PoLine().withId("id1").withCheckinItems(false)), Set.of("id1"), List.of()),
-      Arguments.of("Mixed scenario: checkinItems logic + excludeIds",
-        List.of(
-          new PoLine().withId("id1").withCheckinItems(true),
-          new PoLine().withId("id2").withCheckinItems(false),
-          new PoLine().withId("id3").withCheckinItems(false),
-          new PoLine().withId("id4").withCheckinItems(true)
-        ), Set.of("id3", "id4"), List.of("id1", "id2", "id4")),
-      Arguments.of("All checkinItems=false in excludeIds filtered",
-        List.of(new PoLine().withId("id1").withCheckinItems(false), new PoLine().withId("id2").withCheckinItems(false)),
-        Set.of("id1", "id2"), List.of())
-    );
+        Arguments.of(
+            "checkinItems=true kept even in excludeIds",
+            List.of(new PoLine().withId("id1").withCheckinItems(true)),
+            Set.of("id1"),
+            List.of("id1")),
+        Arguments.of(
+            "checkinItems=false kept when NOT in excludeIds",
+            List.of(new PoLine().withId("id1").withCheckinItems(false)),
+            Set.of("id2"),
+            List.of("id1")),
+        Arguments.of(
+            "checkinItems=false filtered when in excludeIds",
+            List.of(new PoLine().withId("id1").withCheckinItems(false)),
+            Set.of("id1"),
+            List.of()),
+        Arguments.of(
+            "Mixed scenario: checkinItems logic + excludeIds",
+            List.of(
+                new PoLine().withId("id1").withCheckinItems(true),
+                new PoLine().withId("id2").withCheckinItems(false),
+                new PoLine().withId("id3").withCheckinItems(false),
+                new PoLine().withId("id4").withCheckinItems(true)),
+            Set.of("id3", "id4"),
+            List.of("id1", "id2", "id4")),
+        Arguments.of(
+            "All checkinItems=false in excludeIds filtered",
+            List.of(
+                new PoLine().withId("id1").withCheckinItems(false),
+                new PoLine().withId("id2").withCheckinItems(false)),
+            Set.of("id1", "id2"),
+            List.of()));
   }
-
 
   private static class ContextConfiguration {
     @Bean
@@ -378,20 +465,29 @@ public class PieceUpdateInventoryServiceIT {
     }
 
     @Bean
-    HoldingDeletionService holdingDeletionService(ConsortiumUserTenantService consortiumUserTenantService,
-                                                  InventoryHoldingManager inventoryHoldingManager,
-                                                  InventoryItemManager inventoryItemManager,
-                                                  PieceStorageService pieceStorageService,
-                                                  PurchaseOrderLineService purchaseOrderLineService) {
-      return spy(new HoldingDeletionService(consortiumUserTenantService, inventoryHoldingManager,
-        inventoryItemManager, pieceStorageService, purchaseOrderLineService));
+    HoldingDeletionService holdingDeletionService(
+        ConsortiumUserTenantService consortiumUserTenantService,
+        InventoryHoldingManager inventoryHoldingManager,
+        InventoryItemManager inventoryItemManager,
+        PieceStorageService pieceStorageService,
+        PurchaseOrderLineService purchaseOrderLineService) {
+      return spy(
+          new HoldingDeletionService(
+              consortiumUserTenantService,
+              inventoryHoldingManager,
+              inventoryItemManager,
+              pieceStorageService,
+              purchaseOrderLineService));
     }
 
     @Bean
-    PieceUpdateInventoryService pieceUpdateInventoryService(InventoryHoldingManager inventoryHoldingManager,
-                                                            InventoryItemManager inventoryItemManager,
-                                                            HoldingDeletionService holdingDeletionService) {
-      return spy(new PieceUpdateInventoryService(inventoryHoldingManager, inventoryItemManager, holdingDeletionService));
+    PieceUpdateInventoryService pieceUpdateInventoryService(
+        InventoryHoldingManager inventoryHoldingManager,
+        InventoryItemManager inventoryItemManager,
+        HoldingDeletionService holdingDeletionService) {
+      return spy(
+          new PieceUpdateInventoryService(
+              inventoryHoldingManager, inventoryItemManager, holdingDeletionService));
     }
   }
 }
